<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_marginSettings"
    android:orientation="vertical"
    tools:context=".EnterPinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_heightTextViewSettings"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/enterNewPin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_enterNewPine"
            android:textSize="@dimen/size_textSizeTextViewSettings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_heightTextViewSettings"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:inputType="numberPassword"
            android:maxLength="4" />

        <ImageButton
            android:id="@+id/hideOrView"
            android:layout_width="@dimen/size_widthTextViewSettings"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorMyPrimary"
            android:contentDescription="@string/app_showDescription"
            android:src="@drawable/ic_view" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_buttonSettings">

        <Button
            android:id="@+id/saveSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMyButtonSave"
            android:text="@string/app_saveSetting" />
    </LinearLayout>

</LinearLayout>